--- a/assets/sass/_agenda.scss
+++ b/assets/sass/_agenda.scss
@@ -8,9 +8,18 @@
     margin: auto;
     gap: 3.75em;
 
-    @media (max-width: 1100px){
-      width: 800px;
- }
+    @media (max-width: 1100px) {
+      max-width: 100%;
+    }
+
+    @media (max-width: 800px) {
+        grid-template-columns: 1fr;
+        gap: 0;
+
+        .agenda_container_imagens{
+          display: none;
+        }
+    }
 
     &_imagens {
       display: flex;
@@ -50,18 +59,18 @@
     background: linear-gradient(#fff, #fff) padding-box, linear-gradient(45deg, $cor8, $cor9) border-box;
     border-bottom: 3.5px solid transparent;
 
-        .agenda-flex {
-          margin-top: 1.25em;
-          display: grid;
-          grid-template-columns: 1fr 1fr 1fr;
-          row-gap: 0.9375em;
-          align-items: center;
-        }
-        
-        .domingo {
-          padding-bottom: 0.625em;
-          border-bottom: 2px solid $cor10;
-        }
+    .agenda-flex {
+      margin-top: 1.25em;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      row-gap: 0.9375em;
+      align-items: center;
+    }
+
+    .domingo {
+      padding-bottom: 0.625em;
+      border-bottom: 2px solid $cor10;
+    }
   }
 
 }
