--- a/assets/sass/_app.scss
+++ b/assets/sass/_app.scss
@@ -6,18 +6,20 @@
     @include container;
 
     @media (max-width: 1100px) {
-      width: 800px;
+      max-width: 800px;
     }
 
     @media (max-width: 900px) {
+      max-width: 100%;
       .app_container_info h2{
         font-size: 25px;
       }
     }
 
-    @media (max-width: 800px){
+    @media (max-width: 850px){
+      max-width: 100%;
       margin: auto;
-      grid-template-columns: 1fr;
+      grid-template-columns: 100%;
       gap: 40px;
       justify-content: center;
 
