--- a/assets/sass/_areas.scss
+++ b/assets/sass/_areas.scss
@@ -1,38 +1,43 @@
 .areas {
   padding: 60px;
 
-    .areas_container {
-        flex-wrap: wrap;
-        margin: auto;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-        justify-items: center;
-        align-items: center;
-        gap: 20px;   
+  .areas_container {
+    flex-wrap: wrap;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    gap: 20px;
 
-        @media (max-width: 1100px){
-          grid-template-columns: 1fr 1fr 1fr;
-          width: 800px;
-      
-        }
-           
-          img {
-            width: 130px;
-            padding: 10px;
-
-            &:hover{
-              transition: all .6s;
-              transform: scale(1.5);
-            }
+    @media (max-width: 1100px) {
+      grid-template-columns: 1fr 1fr 1fr;
+      max-width: 100%;
           }
-      }
     
-    h2{
-      margin-bottom: 30px;
-      margin-left: 200px;
-      @include titulo($cor4, $cor5)
+
+
+    img {
+      width: 130px;
+      padding: 10px;
+
+      &:hover {
+        transition: all .6s;
+        transform: scale(1.5);
+      }
     }
+  }
+
+  h2 {
+    margin-bottom: 30px;
+    margin-left: 200px;
+    @include titulo($cor4, $cor5)
+  }
+
+  @media (max-width: 850px){
+    h2{
+      font-size: 25px;
+      margin-left: 80px ;
+    }
+  }
 }
-
-
-
