--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,6 @@ body {
   max-width: 100%;
   height: 6.25em;
   background-color: #002a3a; }
-  .header_img_logo2 {
-    display: none; }
   .header_menu {
     max-width: 68.75em;
     margin: 0 auto;
@@ -28,9 +26,12 @@ body {
     align-items: center; }
     @media (max-width: 1100px) {
       .header_menu {
-        grid-template-columns: 1fr;
-        margin: 0 auto;
+        grid-template-columns: auto auto;
+        margin: auto;
         justify-items: center; }
+        .header_menu .header_img_logo1 {
+          max-width: 70px;
+          justify-self: right; }
         .header_menu .header_menu_link {
           font-size: 14px;
           gap: 10px; } }
