--- a/assets/sass/_video.scss
+++ b/assets/sass/_video.scss
@@ -9,41 +9,49 @@
     }
 
     @media (max-width: 900px) {
-     margin: auto;
-      .video_horario{
+      margin: auto;
+      gap: 0;
+
+      .video_horario {
         justify-content: start;
         gap: 50px;
       }
-      .video_horario h2{
+
+      .video_horario h2 {
         font-size: 25px;
       }
-  }
+    }
 
-  @media (max-width:700px){
-    max-width: 100%;
+    @media (max-width:700px) {
+      max-width: 100%;
       margin: auto;
       grid-template-columns: 1fr;
-      gap: 20px;
+      gap: 40px;
       justify-content: center;
 
-      .video_horario{
-       display: grid;
-       grid-template-columns: 1fr 1fr;
-       row-gap: 30px;
-       div{
-        align-self: center;
-       }
+      .video_horario {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        row-gap: 30px;
 
-      
-       h2{
-        grid-column: 1/-1;
-       }
+        div {
+          align-self: center;
+        }
+
+        .video-culto {
+          max-width: 200px;
+        }
+
+
+        h2 {
+          grid-column: 1/-1;
+        }
       }
 
-      .video-culto{
+      .video-culto {
         justify-self: center;
       }
-  }
+    }
 
   }
 
@@ -55,8 +63,8 @@
     justify-content: space-between;
     width: 22.5em;
     padding: 0px 1.25em 0 .625em;
-    
-  
+
+
 
     h2 {
       @include titulo($cor9, $cor8)
