--- a/assets/sass/_galery.scss
+++ b/assets/sass/_galery.scss
@@ -6,7 +6,7 @@
 
 
   @media (max-width: 1100px) {
-    max-width: 900px;
+    max-width: 100%
   }
 
   &_fotos {
@@ -20,10 +20,7 @@
       height: calc(90vh - 80px);
     }
   }
-  @media (max-width: 900px) {
-    max-width: 900px;
-    max-height: 300px;
-  }
+
 
 }
 
