--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -1,24 +1,26 @@
 .header {
   max-width: 100%;
-  height: 6.25em;
+  height: 100px;
   background-color: $cor1;
 
 
   &_menu {
     max-width: 68.75em;
     margin: 0 auto;
-    height: 6.25em;
-    display: grid;
-    grid-template-columns: auto 1fr;
+    height: 80px;
+    display: flex;
+    justify-content: space-around;
     align-items: center;
 
      @media (max-width: 1100px) {
-      grid-template-columns: auto auto;
+      height: 80px;
+      grid-template-columns: 80px auto;
       margin:  auto;
+      align-items: center;
       justify-items: center;
 
       .header_img_logo1{
-        max-width: 70px;
+        max-width: 60px;
         justify-self: right;
       }
 
