--- a/assets/sass/_galery.scss
+++ b/assets/sass/_galery.scss
@@ -1,12 +1,18 @@
 .galery {
   margin: 1.25em auto;
-  max-width: 68.75em;
-  height: calc(90vh - 80px);
+  max-width: 100%;
+  // height: calc(90vh - 80px);
+
   overflow: hidden;
 
 
   @media (max-width: 1100px) {
-    max-width: 100%
+    max-width: 100%;
+    height: 80vh;
+
+    &_fotos{
+      width: 800%;
+    }
   }
 
   &_fotos {
