--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -1,26 +1,24 @@
 .header {
   max-width: 100%;
-  height: 100px;
   background-color: $cor1;
+  padding: 15px;
 
 
   &_menu {
     max-width: 68.75em;
-    margin: 0 auto;
-    height: 80px;
+    margin: auto;
+    // height: 80px;
     display: flex;
     justify-content: space-around;
     align-items: center;
 
      @media (max-width: 1100px) {
-      height: 80px;
       grid-template-columns: 80px auto;
-      margin:  auto;
       align-items: center;
       justify-items: center;
 
       .header_img_logo1{
-        max-width: 60px;
+        max-width: 50px;
         justify-self: right;
       }
 
