--- a/assets/sass/_galery.scss
+++ b/assets/sass/_galery.scss
@@ -15,7 +15,9 @@
     }
   }
   @media(max-width: 950px){
-    max-width: 100%;
+    // max-width: 90%;
+    max-height: 80%;
+   
     
     &_fotos{
       width: 100%;
