--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ body {
         width: 800%; } }
   @media (max-width: 950px) {
     .galery {
-      max-width: 100%; }
+      max-height: 80%; }
       .galery_fotos {
         width: 100%; } }
   .galery_fotos {
