--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,20 +56,20 @@ body {
     border-radius: 5px; }
 
 .galery {
-  margin: 10px auto;
-  max-width: 100%;
+  margin: 30px auto 0 auto;
+  max-width: 95%;
+  height: calc(90vh-80px);
   overflow: hidden; }
   @media (max-width: 1100px) {
     .galery {
-      max-width: 100%;
-      height: 80vh; }
+      margin: 20px auto 0 auto;
+      max-width: 90%;
+      height: calc(90vh-80px); }
       .galery_fotos {
         width: 800%; } }
   @media (max-width: 950px) {
     .galery {
-      max-height: 80%; }
-      .galery_fotos {
-        width: 100%; } }
+      max-height: 50%; } }
   .galery_fotos {
     width: 500%;
     animation-name: animacao;
