--- a/assets/sass/_galery.scss
+++ b/assets/sass/_galery.scss
@@ -1,14 +1,16 @@
 .galery {
-  margin: 10px auto;
-  max-width: 100%;
-  // height: calc(90vh - 80px);
+  margin: 30px auto 0 auto;
+  max-width: 95%;
+  height: calc(90vh-80px);
+  
 
   overflow: hidden;
 
 
   @media (max-width: 1100px) {
-    max-width: 100%;
-    height: 80vh;
+    margin: 20px auto 0 auto;
+    max-width: 90%;
+    height: calc(90vh-80px);
 
     &_fotos{
       width: 800%;
@@ -16,12 +18,8 @@
   }
   @media(max-width: 950px){
     // max-width: 90%;
-    max-height: 80%;
+    max-height: 50%;
    
-    
-    &_fotos{
-      width: 100%;
-    }
   }
 
   &_fotos {
