--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,9 +62,8 @@ body {
   overflow: hidden; }
   @media (max-width: 1100px) {
     .galery {
-      margin: 20px auto 0 auto;
-      max-width: 90%;
-      height: calc(90vh-80px); }
+      max-width: 95%;
+      height: calc(70vh-80px); }
       .galery_fotos {
         width: 800%; } }
   @media (max-width: 950px) {
@@ -108,16 +107,7 @@ body {
     @media (max-width: 1100px) {
       .video_container {
         width: 800px; } }
-    @media (max-width: 900px) {
-      .video_container {
-        margin: auto;
-        gap: 0; }
-        .video_container .video_horario {
-          justify-content: start;
-          gap: 50px; }
-        .video_container .video_horario h2 {
-          font-size: 25px; } }
-    @media (max-width: 700px) {
+    @media (max-width: 850px) {
       .video_container {
         max-width: 100%;
         margin: auto;
@@ -217,7 +207,7 @@ body {
       .app_container {
         max-width: 100%;
         margin: auto;
-        grid-template-columns: 100%;
+        grid-template-columns: 1fr;
         gap: 40px;
         justify-content: center; }
         .app_container .app_container_info {
