--- a/assets/sass/_app.scss
+++ b/assets/sass/_app.scss
@@ -19,7 +19,7 @@
     @media (max-width: 850px){
       max-width: 100%;
       margin: auto;
-      grid-template-columns: 100%;
+      grid-template-columns: 1fr;
       gap: 40px;
       justify-content: center;
 
