--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ body {
   @media (max-width: 1100px) {
     .galery {
       max-width: 95%;
-      height: calc(70vh-80px); }
+      height: 50%; }
       .galery_fotos {
         width: 800%; } }
   @media (max-width: 950px) {
