--- a/assets/sass/_galery.scss
+++ b/assets/sass/_galery.scss
@@ -9,7 +9,7 @@
 
   @media (max-width: 1100px) {
     max-width: 95%;
-    height: calc(70vh-80px);
+    height: 50%;
 
     &_fotos{
       width: 800%;
