--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -376,7 +376,6 @@ body {
   .dizimos h2 {
     grid-column: 1/4;
     margin-bottom: 30px;
-    margin-left: 200px;
     font-family: "Sora";
     font-size: 1.875em;
     font-weight: 700;
@@ -411,8 +410,10 @@ body {
       padding-bottom: 60px; }
       .dizimos .dizimos {
         max-width: 100%; }
+        .dizimos .dizimos section .area-titulo-posicao {
+          margin-left: 0; }
       .dizimos .dizimos_container {
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         justify-items: center;
         gap: 50px;
         max-width: 100%; }
@@ -439,13 +440,20 @@ body {
       width: 200px; }
     @media (max-width: 850px) {
       .footer_container {
-        grid-template-columns: 1fr;
-        gap: 40px;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 20px;
         justify-items: center;
         font-size: 16px;
         text-align: center; }
         .footer_container .footer_icones {
-          justify-self: center; } }
+          justify-self: center; }
+        .footer_container img {
+          grid-column: 1/4; }
+        .footer_container .footer_flex {
+          grid-column: 1/3; } }
+  @media (max-width: 850px) {
+    .footer {
+      padding: 60px; } }
   .footer_flex {
     display: flex;
     flex-direction: column;
