--- a/assets/sass/_dizimos.scss
+++ b/assets/sass/_dizimos.scss
@@ -3,12 +3,10 @@
   background-color: $cor10;
   padding-bottom: 100px;
 
-
-
   h2 {
     grid-column: 1/4;
     margin-bottom: 30px;
-    margin-left: 200px;
+    // margin-left: 200px;
     @include titulo($cor6, $cor2)
   }
 
@@ -40,12 +38,18 @@
 
   @media (max-width: 850px) {
     padding-bottom: 60px;
+    
     .dizimos {
       max-width: 100%;
-    }
+
+     section .area-titulo-posicao{
+      margin-left: 0;
+      }
+     
+   }
 
     .dizimos_container {
-      grid-template-columns: 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
       justify-items: center;
       gap: 50px;
       max-width: 100%;
