--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -22,9 +22,9 @@
     }
 
     @media (max-width:850px) {
-      // padding: 10px;
-      grid-template-columns: 1fr;
-      gap: 40px;
+
+      grid-template-columns: 1fr 1fr 1fr;
+      gap: 20px;
       justify-items: center;
       font-size: 16px;
       text-align: center;
@@ -32,9 +32,19 @@
       .footer_icones {
         justify-self: center;
       }
+      
+      img{
+        grid-column: 1/4;
+      }
+      .footer_flex{
+        grid-column: 1/3;
+      }
+
     }
   }
-
+@media (max-width:850px) {
+  padding: 60px;
+}
 
   &_flex {
     display: flex;
