--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,58 +14,26 @@ body {
 1800px +: big desktop
 */
 .header {
-  max-width: 100%;
   background-color: #002a3a;
-  padding: 15px; }
-  .header_menu {
-    max-width: 68.75em;
-    margin: auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center; }
-    @media (max-width: 1100px) {
-      .header_menu {
-        grid-template-columns: 80px auto;
-        align-items: center;
-        justify-items: center; }
-        .header_menu .header_img_logo1 {
-          max-width: 50px;
-          justify-self: right; }
-        .header_menu .header_menu_link {
-          font-size: 14px;
-          gap: 10px; } }
-    .header_menu_logo {
-      margin-top: 0.625em; }
+  padding: 20px; }
 
-.header_menu_link {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  gap: 0.9375em;
-  list-style: none; }
-  .header_menu_link a {
-    display: inline-block;
-    font-family: 'Sora';
-    color: #fff;
-    text-decoration: none;
-    padding: 0.625em 1.25em; }
-    .header_menu_link a:hover:not(.link-ofertas) {
-      color: #ffa400; }
-  .header_menu_link .link-ofertas {
-    background: linear-gradient(120deg, #ee2737, #ffa400);
-    border-radius: 5px; }
+.fig1, .fig_2 {
+  margin-left: 80px; }
+
+.aparecer {
+  display: none; }
 
 .img-controle1 {
-  background: center/contain no-repeat url("../images/banners/serie.jpg"); }
+  background: top/contain no-repeat url("../images/banners/serie.jpg"); }
 
 .img-controle2 {
-  background: center/contain no-repeat url("../images/banners/cr.jpg"); }
+  background: top/contain no-repeat url("../images/banners/cr.jpg"); }
 
 .img-controle3 {
-  background: center/contain no-repeat url("../images/banners/culto-jovem.jpg"); }
+  background: top/contain no-repeat url("../images/banners/culto-jovem.jpg"); }
 
-.img-altura {
-  height: 80vh; }
+.carousel-item {
+  height: 90vh; }
 
 .video {
   padding: 4.0625em; }
