--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -1,60 +1,71 @@
-.header {
-  max-width: 100%;
+.header{
   background-color: $cor1;
-  padding: 15px;
-
-
-  &_menu {
-    max-width: 68.75em;
-    margin: auto;
-    // height: 80px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-     @media (max-width: 1100px) {
-      grid-template-columns: 80px auto;
-      align-items: center;
-      justify-items: center;
-
-      .header_img_logo1{
-        max-width: 50px;
-        justify-self: right;
-      }
-
-       .header_menu_link{
-        font-size: 14px;
-        gap: 10px;
-      }
-    }
-
-      &_logo {
-      margin-top: 0.625em;
-    }
-  }
+  padding: 20px;
+}
+.fig1, .fig_2{
+  margin-left: 80px;
+}
+.aparecer{
+  display: none;
 }
 
-.header_menu_link {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  gap: 0.9375em;
-  list-style: none;
 
-  a {
-    display: inline-block;
-    font-family: 'Sora';
-    color: #fff;
-    text-decoration: none;
-    padding: 0.625em 1.25em;
 
-    &:hover:not(.link-ofertas) {
-      color: $cor2;
-    }
-  }
+// .header {
+//    max-width: 100%;
+//   background-color: $cor1;
+//   padding: 20px;
 
-  .link-ofertas {
-    background: linear-gradient(120deg, $cor3, $cor2);
-    border-radius: 5px;
-  }
-}
+//   &_menu {
+//     max-width: 68.75em;
+//      margin: auto;
+//      height: 80px;
+//      display: flex;
+//      justify-content: space-around;
+//      align-items: center;
+
+//      @media (max-width: 1100px) {
+//        grid-template-columns: 80px auto;
+//        align-items: center;
+//        justify-items: center;
+
+//       .header_img_logo1{
+//          max-width: 50px;
+//          justify-self: right;
+//       }
+
+//        .header_menu_link{
+//          font-size: 14px;
+//          gap: 10px;
+//       }
+//     }
+
+//       &_logo {
+//        margin-top: 0.625em;
+//     }
+//   }
+// }
+
+//  .header_menu_link {
+//    display: flex;
+//    flex-wrap: wrap;
+//    justify-content: flex-end;
+//    gap: 0.9375em;
+//    list-style: none;
+
+//  .headre_menu_link a {
+//      display: inline-block;
+//     font-family: 'Sora';
+//     color: #fff;
+//     text-decoration: none;
+//      padding: 0.625em 1.25em;
+
+//     &:hover:not(.link-ofertas) {
+//       color: $cor2;
+//     }
+//   }
+
+//   .link-ofertas {
+//     background: linear-gradient(120deg, $cor3, $cor2);
+//     border-radius: 5px;
+//   }
