adicionando media nas areas

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,6 +297,12 @@ body {
       .areas .areas_container {
         grid-template-columns: 1fr 1fr 1fr;
         max-width: 100%; } }
+    @media (max-width: 600px) {
+      .areas .areas_container {
+        grid-template-columns: 1fr 1fr; } }
+    @media (max-width: 500px) {
+      .areas .areas_container {
+        grid-template-columns: 1fr; } }
     .areas .areas_container img {
       width: 130px;
       padding: 10px; }
