--- a/assets/sass/_areas.scss
+++ b/assets/sass/_areas.scss
@@ -13,9 +13,14 @@
     @media (max-width: 1100px) {
       grid-template-columns: 1fr 1fr 1fr;
       max-width: 100%;
-          }
-    
+    }
 
+    @media(max-width: 600px) {
+      grid-template-columns: 1fr 1fr;
+    }
+    @media(max-width: 500px){
+      grid-template-columns: 1fr;
+    }
 
     img {
       width: 130px;
@@ -34,10 +39,10 @@
     @include titulo($cor4, $cor5)
   }
 
-  @media (max-width: 850px){
-    h2{
+  @media (max-width: 850px) {
+    h2 {
       font-size: 25px;
-      margin-left: 80px ;
+      margin-left: 80px;
     }
   }
 }
