--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,12 @@ body {
 
 @media (max-width: 700px) {
   .fig_1 {
+    width: 250px;
+    margin-left: 0; } }
+
+@media (max-width: 500px) {
+  .fig_1 {
+    width: 200px;
     margin-left: 0; } }
 
 .link-ofertas {
