--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -27,6 +27,13 @@
 }
 @media(max-width: 700px){
   .fig_1{
+    width: 250px;
+    margin-left: 0;
+  }
+}
+@media(max-width: 500px){
+  .fig_1{
+    width: 200px;
     margin-left: 0;
   }
 }
