--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -23,8 +23,10 @@
 }
 
 .navbar-toggler{
+  width: 40px;
  border-color: #fff;
 }
+
 @media(max-width: 700px){
   .fig_1{
     width: 250px;
@@ -37,6 +39,7 @@
     margin-left: 0;
   }
 }
+
 
 
 
