--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,10 +32,15 @@ body {
 .header_menu_link a:hover:not(.link-ofertas) {
   color: #ffa400; }
 
-.navbar-toggler {
-  width: 40px;
-  border-color: #fff; }
+nav .offcanvas {
+  background-color: #002a3a; }
 
+/*
+.navbar-toggler{
+  width: 40px;
+ border-color: #fff;
+}
+*/
 @media (max-width: 700px) {
   .fig_1 {
     width: 250px;
