--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
   padding: 20px; }
 
 .fig_1 {
-  margin-left: 150px; }
+  margin-left: 100px; }
 
 .fig_2 {
   margin-left: 60px; }
@@ -41,6 +41,10 @@ nav .offcanvas {
  border-color: #fff;
 }
 */
+@media (max-width: 1050px) {
+  .fig_1 {
+    margin-left: 0; } }
+
 @media (max-width: 700px) {
   .fig_1 {
     width: 250px;
