--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -2,7 +2,10 @@
   background-color: $cor1;
   padding: 20px;
 }
-
+.container-fluid{
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
 
 .fig_1{
   margin-left: 100px;
