--- a/assets/sass/_galery.scss
+++ b/assets/sass/_galery.scss
@@ -2,87 +2,45 @@
   background: top / contain no-repeat url("../images/banners/serie.jpg");
 }
 .img-controle2{
+
   background: top / contain no-repeat url("../images/banners/cr.jpg");
 }
 .img-controle3{
-  background: top / contain no-repeat url("../images/banners/culto-jovem.jpg");
+
+  background: top / contain  no-repeat url("../images/banners/culto-jovem.jpg");
+}
+.tamanhoSlides{
+  height: 25em;
+  margin-bottom: 300px;
 }
 
 .carousel-item{
   height: 90vh;
 }
 
+@media(max-width: 1200px){
+  .tamanhoSlides{
+    height: 10em;
+    margin-bottom: 250px;
+  }
+}
+@media(max-width: 1000px){
+  .tamanhoSlides{
+    // height: 10em;
+    margin-bottom: 200px;
+  }
+}
+@media(max-width: 900px){
+  .tamanhoSlides{
+    height: 20em;
+    margin-bottom: 150px;
+  }
+}
 
 
-// .galery {
-//   margin: 30px auto 0 auto;
-//   max-width: 95%;
-//   height: calc(90vh-80px);
-  
-
-//   overflow: hidden;
-
-
-//   @media (max-width: 1100px) {
-//     max-width: 95%;
-//     height: 50%;
-
-//     &_fotos{
-//       width: 800%;
-//     }
-//   }
-
-//   @media(max-width: 950px){
-//     max-height: 50%;
-   
-//   }
-
-//   &_fotos {
-//     width: 500%;
-//     animation-name: animacao;
-//     animation-duration: 30s;
-//     animation-iteration-count: infinite;
-
-//     img {
-//       width: 20%;
-//       height: calc(90vh - 80px);
-//     }
-//   }
-
-
-// }
-
-
-// @keyframes animacao {
-//   0% {
-//     margin-left: 0;
-//   }
-
-//   20% {
-//     margin-left: 0;
-//   }
-
-//   25% {
-//     margin-left: -100%;
-//   }
-
-//   45% {
-//     margin-left: -100%;
-//   }
-
-//   50% {
-//     margin-left: -201%;
-//   }
-
-//   70% {
-//     margin-left: -201%;
-//   }
-
-//   90% {
-//     margin-left: -300%;
-//   }
-
-//   100% {
-//     margin-left: -300%;
+// @media(max-width: 1100px){
+//   .tamanhoSlides{
+//     // height: 20em;
+//     margin-bottom: 350px;
 //   }
 // }
