--- a/assets/sass/_galery.scss
+++ b/assets/sass/_galery.scss
@@ -11,7 +11,7 @@
 }
 .tamanhoSlides{
   height: 25em;
-  margin-bottom: 300px;
+  margin-bottom: 150px;
 }
 
 .carousel-item{
@@ -20,20 +20,26 @@
 
 @media(max-width: 1200px){
   .tamanhoSlides{
-    height: 10em;
+    height: 20em;
     margin-bottom: 250px;
   }
 }
 @media(max-width: 1000px){
   .tamanhoSlides{
-    // height: 10em;
+    height: 25em;
     margin-bottom: 200px;
   }
 }
 @media(max-width: 900px){
   .tamanhoSlides{
     height: 20em;
-    margin-bottom: 150px;
+    margin-bottom: 250px;
+  }
+}
+@media(max-width: 850px){
+  .tamanhoSlides{
+    height: 15em;
+    margin-bottom: 200px;
   }
 }
 
