media do responsivo3

--- a/assets/sass/_galery.scss
+++ b/assets/sass/_galery.scss
@@ -10,12 +10,12 @@
   background: top / contain  no-repeat url("../images/banners/culto-jovem.jpg");
 }
 .tamanhoSlides{
-  height: 25em;
+  height: 30em;
   margin-bottom: 150px;
 }
 
 .carousel-item{
-  height: 90vh;
+  height: 85vh;
 }
 
 @media(max-width: 1200px){
@@ -39,6 +39,12 @@
 @media(max-width: 850px){
   .tamanhoSlides{
     height: 15em;
+    margin-bottom: 200px;
+  }
+}
+@media(max-width: 650px){
+  .tamanhoSlides{
+    height: 10em;
     margin-bottom: 200px;
   }
 }
