media do responsivo5

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,10 +99,15 @@ nav .offcanvas {
     height: 15em;
     margin-bottom: 200px; } }
 
-@media (max-width: 650px) {
+@media (max-width: 600px) {
   .tamanhoSlides {
     height: 10em;
     margin-bottom: 200px; } }
+
+@media (max-width: 500px) {
+  .tamanhoSlides {
+    height: 10em;
+    margin-bottom: 100px; } }
 
 .video {
   padding: 4.0625em; }
