--- a/assets/sass/_video.scss
+++ b/assets/sass/_video.scss
@@ -7,7 +7,7 @@
     @media (max-width: 1100px) {
       width: 800px;
     }
-  
+
     @media (max-width:850px) {
       max-width: 100%;
       margin: auto;
@@ -25,7 +25,8 @@
         }
 
         .video-culto {
-          max-width: 200px;
+          max-width: 150px;
+          grid-column: 1/1;
         }
 
 
@@ -75,6 +76,23 @@
     }
   }
 }
+
+// @media(max-width:500px) {
+//   .video {
+//     padding: 45px;
+//   }
+
+//   .video_container {
+//     gap: 30px;
+//   }
+
+//   .video-culto {
+//     justify-self: start;
+//     width: 150px;
+//     margin-left: 0px;
+//   }
+// }
+
 .app-container,
 .agenda-container,
 .dizimos-container {
