--- a/assets/sass/_app.scss
+++ b/assets/sass/_app.scss
@@ -31,6 +31,12 @@
       }
     }
 
+    @media(max-width: 500px){
+      .app-video{
+        display: none;
+      }
+    }
+
     .video-app {
       box-shadow: 0px 0px 0px 10px $cor10;
       border-radius: 15px;
@@ -54,6 +60,8 @@
         color: #666;
         font-size: 0.9375em;
       }
+
+
 
 
       .btn-app {
