media do responsivo8

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,13 +177,10 @@ nav .offcanvas {
 @media (max-width: 500px) {
   .video {
     padding: 45px; }
+    .video-app {
+      width: 400px; }
   .video_container {
-    gap: 30px; }
-  .video-culto {
-    justify-self: start;
-    width: 150px;
-    margin-left: 0px;
-    display: none; } }
+    gap: 30px; } }
 
 .app-container,
 .agenda-container,
@@ -240,8 +237,8 @@ nav .offcanvas {
         .app_container .app-video {
           justify-self: center; } }
     @media (max-width: 500px) {
-      .app_container .app-video {
-        display: none; } }
+      .app_container .app-celebracao {
+        width: 400px; } }
     .app_container .video-app {
       box-shadow: 0px 0px 0px 10px #F0EEEE;
       border-radius: 15px; }
