--- a/assets/sass/_app.scss
+++ b/assets/sass/_app.scss
@@ -32,8 +32,10 @@
     }
 
     @media(max-width: 500px){
-      .app-video{
-        display: none;
+      .app{
+        &-celebracao{
+          width: 400px;
+        }
       }
     }
 
