--- a/assets/sass/_app.scss
+++ b/assets/sass/_app.scss
@@ -33,8 +33,8 @@
 
     @media(max-width: 500px){
       .app{
-        &-celebracao{
-          width: 400px;
+        &-app{
+          width: 150px;
         }
       }
     }
