--- a/assets/sass/_app.scss
+++ b/assets/sass/_app.scss
@@ -32,9 +32,9 @@
     }
 
     @media(max-width: 500px){
-      .app{
-        &-app{
-          width: 150px;
+      .app-video{
+       .video-app{
+          width: 400px;
         }
       }
     }
