--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -465,7 +465,7 @@ nav .offcanvas {
   @media (max-width: 850px) and (max-width: 500px) {
     .dizimos .dizimos_container {
       grid-template-columns: 1fr;
-      font-size: 14px;
+      font-size: 16px;
       line-height: 1;
       text-align: center;
       gap: 20px; }
@@ -508,6 +508,11 @@ nav .offcanvas {
   @media (max-width: 850px) {
     .footer {
       padding: 60px; } }
+  @media (max-width: 500px) {
+    .footer {
+      padding: 30px 10px 30px 10px; }
+      .footer_container {
+        font-size: 16px; } }
   .footer_flex {
     display: flex;
     flex-direction: column;
@@ -517,10 +522,13 @@ nav .offcanvas {
     justify-self: end;
     font-size: 50px; }
 
-.marca {
+.marca h3 {
   text-align: center;
   font-family: "Roboto";
   padding: 16px;
   background-color: #002a3a;
   color: #F0EEEE;
-  font-size: 10px; }
+  font-size: 16px; }
+  @media (max-width: 500px) {
+    .marca h3 h3 {
+      font-size: 14px; } }
