--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -45,6 +45,12 @@
 @media (max-width:850px) {
   padding: 60px;
 }
+@media(max-width:500px){
+  padding: 30px 10px 30px 10px;
+  &_container{
+    font-size: 16px;
+  }
+}
 
   &_flex {
     display: flex;
@@ -57,13 +63,20 @@
     justify-self: end;
     font-size: 50px;
   }
+
 }
 
-.marca {
+.marca h3{
   text-align: center;
   font-family: "Roboto";
   padding: 16px;
   background-color: $cor1;
   color: $cor10;
-  font-size: 10px;
+  font-size: 16px;
+
+  @media(max-width:500px){
+    h3{
+      font-size: 14px;
+    }
+  }
 }
