--- a/assets/sass/_agenda.scss
+++ b/assets/sass/_agenda.scss
@@ -1,5 +1,9 @@
 .agenda {
-  padding: 4.0625em 4.0625em 0 4.0625em;
+  padding: 65px 65px 0 65px;
+
+  @media(max-width: 500px){
+    padding: 65px 40px 0 40px;
+  }
 
   &_container {
     width: 55em;
@@ -20,6 +24,7 @@
           display: none;
         }
     }
+   
 
     &_imagens {
       display: flex;
