--- a/assets/sass/_dizimos.scss
+++ b/assets/sass/_dizimos.scss
@@ -6,7 +6,7 @@
   h2 {
     grid-column: 1/4;
     margin-bottom: 30px;
-    // margin-left: 200px;
+    margin-left: 200px;
     @include titulo($cor6, $cor2)
   }
 
@@ -38,58 +38,60 @@
 
   @media (max-width: 850px) {
     padding-bottom: 60px;
-    
-    .dizimos {
-      max-width: 100%;
+    max-width: 100%;
 
-     section .area-titulo-posicao{
+    h2 {
       margin-left: 0;
-      }
-     
-   }
+    }
+  
+
+  .dizimos_container {
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+    gap: 50px;
+    max-width: 100%;
+
+    div {
+      border-right: none;
+    }
+  }
+
+  @media(max-width: 600px) {
+    h2 {
+      // font-size: 25px;
+      text-align: center;
+    }
 
     .dizimos_container {
-      grid-template-columns: 1fr 1fr 1fr;
-      justify-items: center;
-      gap: 50px;
-      max-width: 100%;
-
-      div {
-        border-right: none;
-      }
+      font-size: 14px;
+      line-height: 1;
+      text-align: center;
+      grid-template-columns: 1fr 1fr;
+      gap: 20px;
     }
-    @media(max-width: 600px){
-      h2{
-        // font-size: 25px;
-        text-align: center;
-      }
-      .dizimos_container{
-        font-size: 14px;
-        line-height: 1;
-        text-align: center;
-        grid-template-columns: 1fr 1fr;
-        gap: 20px;
-      }
-      .pix{
-        grid-column: 1/4;
-      }
+
+    .pix {
+      grid-column: 1/4;
     }
-@media(max-width: 500px){
-  .dizimos_container{
-    grid-template-columns: 1fr;
-    font-size: 16px;
-    line-height: 1;
-    text-align: center;
-    gap: 20px;
   }
-  .pix{
-    grid-column: 1/2;
-  }
-  .dizimos_flex{
-    padding: 10px 0 10px 0;
-  }
-}
 
-  }
-}
+  @media(max-width: 500px) {
+    .dizimos_container {
+      grid-template-columns: 1fr;
+      font-size: 16px;
+      line-height: 1;
+      text-align: center;
+      gap: 20px;
+    }
 
+    .pix {
+      grid-column: 1/2;
+    }
+
+    .dizimos_flex {
+      padding: 10px 0 10px 0;
+    }
+  }
+
+}
+}
