--- a/assets/sass/_app.scss
+++ b/assets/sass/_app.scss
@@ -44,6 +44,18 @@
           width: 350px;
         }
       }
+      .app_container_info{
+        align-items: center;
+      }
+
+      .app_container_info p{
+        text-align: center;
+      }
+
+      .app_container_info h2{
+        text-align: center;
+        font-size: 25px;
+      }
     }
 
     .video-app {
