--- a/assets/sass/_video.scss
+++ b/assets/sass/_video.scss
@@ -93,6 +93,10 @@
   .video {
     padding: 45px;
 
+    .video_horario h2{
+      font-size: 25px;
+    }
+
     &-celebracao{
      width: 350px;
     }
