--- a/assets/sass/_areas.scss
+++ b/assets/sass/_areas.scss
@@ -50,4 +50,12 @@
       margin-left: 0px;
     }
   }
+  @media (max-width: 400px) {
+    padding: 40px;
+    h2 {
+      text-align: center;
+      font-size: 25px;
+      margin-left: 0px;
+    }
+  }
 }
