--- a/assets/sass/_areas.scss
+++ b/assets/sass/_areas.scss
@@ -51,7 +51,7 @@
     }
   }
   @media (max-width: 400px) {
-    padding: 40px;
+    padding: 30px 40px 40px 40px;
     h2 {
       text-align: center;
       font-size: 25px;
